Fix height of play-again area so it doesn't breka on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     height: 70vh;
-    max-height: 410px;
+    max-height: 420px;
     max-width: 700px;
     font-size: 1.1em;
     min-width: 200px;
